parser/tests/snapshots/parser__comments_3.snap
---
created: "2019-08-21T06:34:38.548088Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "bar",
                value: Color(
                    Color {
                        r: 0,
                        g: 0,
                        b: 255,
                        a: 1.0,
                    },
                ),
            },
        ),
    ],
}
