parser/tests/snapshots/parser__comments_6.snap
---
created: "2019-08-21T07:08:26.162109Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        RuleSet(
            RuleSet {
                identifier: "a",
                items: [],
            },
        ),
    ],
}
