parser/tests/snapshots/parser__document.snap
---
created: "2019-08-21T04:52:52.736238Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "mediumBright",
                value: Color(
                    Color {
                        r: 170,
                        g: 187,
                        b: 204,
                        a: 0.33,
                    },
                ),
            },
        ),
        Variable(
            Declaration {
                identifier: "red",
                value: Color(
                    Color {
                        r: 255,
                        g: 0,
                        b: 0,
                        a: 1.0,
                    },
                ),
            },
        ),
        Variable(
            Declaration {
                identifier: "white",
                value: Color(
                    Color {
                        r: 255,
                        g: 255,
                        b: 255,
                        a: 1.0,
                    },
                ),
            },
        ),
        Declaration(
            Declaration {
                identifier: "ApplicationBackground",
                value: ColorSet(
                    ColorSet {
                        light: Variable(
                            Variable {
                                identifier: "white",
                                opacity: 1.0,
                            },
                        ),
                        dark: Color(
                            Color {
                                r: 20,
                                g: 21,
                                b: 23,
                                a: 1.0,
                            },
                        ),
                    },
                ),
            },
        ),
        RuleSet(
            RuleSet {
                identifier: "Text",
                items: [
                    Declaration(
                        Declaration {
                            identifier: "Primary",
                            value: ColorSet(
                                ColorSet {
                                    light: Color(
                                        Color {
                                            r: 21,
                                            g: 22,
                                            b: 24,
                                            a: 1.0,
                                        },
                                    ),
                                    dark: Color(
                                        Color {
                                            r: 231,
                                            g: 232,
                                            b: 234,
                                            a: 1.0,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Declaration(
                        Declaration {
                            identifier: "Secondary",
                            value: ColorSet(
                                ColorSet {
                                    light: Color(
                                        Color {
                                            r: 117,
                                            g: 118,
                                            b: 122,
                                            a: 1.0,
                                        },
                                    ),
                                    dark: Color(
                                        Color {
                                            r: 133,
                                            g: 134,
                                            b: 138,
                                            a: 1.0,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
        RuleSet(
            RuleSet {
                identifier: "NumericInput",
                items: [
                    RuleSet(
                        RuleSet {
                            identifier: "ActionKey",
                            items: [
                                Declaration(
                                    Declaration {
                                        identifier: "Background",
                                        value: ColorSet(
                                            ColorSet {
                                                light: Variable(
                                                    Variable {
                                                        identifier: "red",
                                                        opacity: 1.0,
                                                    },
                                                ),
                                                dark: Color(
                                                    Color {
                                                        r: 255,
                                                        g: 0,
                                                        b: 255,
                                                        a: 1.0,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                Declaration(
                                    Declaration {
                                        identifier: "Highlight",
                                        value: ColorSet(
                                            ColorSet {
                                                light: Color(
                                                    Color {
                                                        r: 204,
                                                        g: 204,
                                                        b: 204,
                                                        a: 1.0,
                                                    },
                                                ),
                                                dark: Color(
                                                    Color {
                                                        r: 0,
                                                        g: 0,
                                                        b: 0,
                                                        a: 1.0,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
        Declaration(
            Declaration {
                identifier: "Background",
                value: ColorSet(
                    ColorSet {
                        light: Color(
                            Color {
                                r: 214,
                                g: 217,
                                b: 222,
                                a: 1.0,
                            },
                        ),
                        dark: Color(
                            Color {
                                r: 49,
                                g: 49,
                                b: 49,
                                a: 1.0,
                            },
                        ),
                    },
                ),
            },
        ),
    ],
}
